--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.6"
 [tool.poetry.dev-dependencies]
 black = "20.8b1"
 mypy = "0.790"
+sphinx = "^3.2.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
