--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.6"
+typing-extensions = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
 black = "20.8b1"
