--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,7 +30,7 @@ jobs:
         python-root-list: "result"
         use-pylint: false
         use-pycodestyle: false
-        use-flake8: false
+        use-flake8: true
         use-black: true
         use-mypy: true
         use-isort: false
