--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ typing-extensions = "^3.7.4"
 black = "20.8b1"
 mypy = "0.790"
 sphinx = "^3.2.1"
+flake8 = "^3.8.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
