--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "patina"
-version = "0.3.1"
-description = "Result and Option types for Python"
+version = "0.4.0"
+description = "Rusty types for Python"
 authors = ["Patrick Gingras <775.pg.12@gmail.com>"]
 license = "MIT"
 readme = "README.md"
